--- a/project.config.json
+++ b/project.config.json
@@ -14,7 +14,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.11.0",
-	"appid": "wx7ffe7278ec55755b",
+	"appid": "wx09672e3774677683",
 	"projectname": "program",
 	"debugOptions": {
 		"hidedInDevtools": []
