--- a/app.json
+++ b/app.json
@@ -1,12 +1,29 @@
 {
   "pages": [
-    "pages/login/login"
+    "pages/home/home",
+    "pages/interview/interview",
+    "pages/mine/mine",
+    "pages/interview/inform_detail/inform_detail"
   ],
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
     "navigationBarTitleText": "WeChat",
     "navigationBarTextStyle": "black"
+  },
+  "tabBar": {
+    "selectedColor": "#7948ea",
+    "list": [
+      {
+        "pagePath": "pages/home/home"
+      },
+      {
+        "pagePath": "pages/interview/interview"
+      },
+      {
+        "pagePath": "pages/mine/mine"
+      }
+    ]
   },
   "style": "v2",
   "sitemapLocation": "sitemap.json"
